--- a/nginx.json
+++ b/nginx.json
@@ -12,7 +12,7 @@
     "container": {
         "type": "DOCKER",
         "docker": {
-            "image": "nginx",
+            "image": "nginx:1.10",
             "network": "BRIDGE",
             "portMappings": [{ "containerPort": 80, "hostPort": 0, "servicePort": 10000, "protocol": "tcp" }]
         }
